# dyadic-storytelling

./: .gitignore  README.md
av-processing/: .gitignore  README.md  pyproject.toml
av-processing/local/: util.py
av-processing/scripts/: align-recordings.py  media-stats.py  process-videos.sh
feature-analysis/: .gitignore  README.md  pyproject.toml
feature-analysis/scripts/: au-exploration.py  ml-combos-test.py  simple-ml-analysis.py  simple-ml-cross-acc.py  simple-ml-extract-table.py  simple-ml-pair-concat.py  simple-ml-prep.py  simple-ml.py  stratify-data.py  summary-analysis.py
feature-extraction/: .gitignore  README.md  child-order.csv  pairs-with-distances.csv  pyproject.toml
feature-extraction/local/: arg_parsing.py  draw.py  face.py  geometry.py  pose.py  util.py
feature-extraction/scripts/: archive-data.py  arg_test.py  check-child-splits.py  consolidate-face.py  consolidate-pose.py  custom-face-viz.py  extract-face.py  extract-pose.py  extract-pyfeat.py  looking-at.py  pack-features.py  vid-durations.py
network-analysis/: .gitignore  README.md  pyproject.toml
network-analysis/scripts/: get-publishable.py  pair-making.py  partition-stats.py  query.py  statistical-analysis.py
storytelling-app/: README.md
