[tool.poetry]
name = "2023-electra-field-feature-analysis"
version = "0.1.0"
description = ""
authors = ["Marc Fraile <marc.fraile.fabrega@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.25.2"
pandas = "^2.1.0"
tqdm = "^4.66.1"
mff-pretty-cli = "^0.1.0"
scikit-learn = "^1.3.0"
matplotlib = "^3.8.0"
seaborn = "^0.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
